--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "liveServer.settings.port": 5501
+	"workbench.colorCustomizations": {
+		"activityBar.background": "#18266B",
+		"titleBar.activeBackground": "#223596",
+		"titleBar.activeForeground": "#F8F9FE"
+	}
 }
