--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
 		"activityBar.background": "#18266B",
 		"titleBar.activeBackground": "#223596",
 		"titleBar.activeForeground": "#F8F9FE"
-	}
+	},
+	"liveServer.settings.port": 5501
 }
